# crm-deployment

./: .gitignore  DEPLOYMENT_SUCCESS.md  FRAPPE_SETUP_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  MIGRATION_FROM_MONOLITH.md  README.md  apps.json  pyproject.toml  setup.py
.cursor/rules/: architecture_overview.mdc  component_patterns.mdc  configuration_management.mdc  copilot-commands.mdc  copilot-context.mdc  copilot-tools.mdc  data_flow_patterns.mdc  deployment-doctrine.mdc  deployment-troubleshooting.mdc  development_workflow.mdc  implementation_roadmap.mdc  intelligent_agent_architecture.mdc  llm_integration_architecture.mdc  question_driven_output_format.mdc  readme.mdc  scaling_deployment.mdc  setup-guide.mdc  specialist_agent_patterns.mdc  testing_patterns.mdc
crm/: hooks.py  patches.txt  requirements.txt
crm/api/: __init__.py  agent.py  ai.py  email.py  etl.py
crm/www/: crm.html  crm.py  human_inbox.html  human_inbox.py
crm_components/config/: component_config.json  main_config.json
crm_components/core/: component_base.py
crm_components/examples/: simple_usage.py
crm_components/pipelines/: intelligence_pipeline.py  outreach_pipeline.py
crm_intelligence/: crm_intelligence_platform.py
crm_intelligence/api/: tavily_client.py
crm_intelligence/cli/: main.py
crm_intelligence/config/: config_manager.py
crm_intelligence/core/: intelligence.py
crm_intelligence/data/: data_manager.py
crm_intelligence/templates/: template_engine.py
docs/: AGENTIC_ROADMAP.md  API_INDEX.md  ARCHITECTURE.md  DELIVERABILITY.md  EAIA_E2E_TESTS.md  EAIA_INTEGRATION.md  EAIA_RUNBOOK.md  ERD.md  folderStructure.md
frappe/: pyproject.toml  requirements.txt  setup.py
scalable_crm_intelligence/: abbey_capital_INTELLIGENT_analysis_20250830_194917.json  abbey_capital_REAL_intelligence_20250830_192501.json  abbey_capital_SEMANTIC_analysis_20250830_200123.json  abbey_linkedin.json  abbey_semantic_cli.json  basic_api_test.py  demo_intelligent_qa.py  dynamic_semantic_intelligence.py  intelligent_response_demo_20250830_185645.json  real_intelligent_test.py  requirements.txt  semantic_intelligence_agent.py  simple_api_test.py  test_intelligent_agents.py  test_real_apis.py
scalable_crm_intelligence/components/: __init__.py
scalable_crm_intelligence/config/: configuration_manager.py
scripts/: DYNAMIC_SYSTEM_README.md  README.md  comprehensive_directory.txt  cursorRules.md  database_summary.txt  dynamic_crm_intelligence_system.py  e2e_email_flow.py  eaia_client_example.py  example_usage.py  leads.csv  organize_contacts.py  organized_contacts.csv  organized_contacts.txt  organized_leads.csv  organized_leads.json  scalable_crm_architecture.py  setup_openai.py  test_ai_capabilities.py
(+826 files in other folders)
