[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frappe"
version = "15.0.0"
description = "Metadata driven, full-stack low code web framework"
authors = [
    {name = "Frappe Technologies Pvt Ltd", email = "developers@frappe.io"}
]
dependencies = [
    "Babel~=2.16.0",
    "Click~=8.2.0",
    "filelock~=3.18.0",
    "filetype~=1.2.0",
    "GitPython~=3.1.44",
    "Jinja2~=3.1.6",
    "Pillow~=11.3.0",
    "PyJWT~=2.10.1",
    "PyMySQL==1.1.1",
    "pypdf~=6.0.0",
    "mysqlclient==2.2.7",
    "PyQRCode~=1.2.1",
    "PyYAML~=6.0.2",
    "RestrictedPython~=8.0",
    "AccessControl~=7.2",
    "WeasyPrint==59.0",
    "pydyf==0.11.0",
    "Werkzeug==3.1.3",
    "Whoosh~=2.7.4",
    "beautifulsoup4~=4.13.4",
    "bleach-allowlist~=1.0.3",
    "chardet~=5.2.0",
    "croniter~=6.0.0",
    "cryptography~=45.0.4",
    "cssutils~=2.11.1",
    "email-reply-parser~=0.5.12",
    "html5lib~=1.1",
    "ipython~=8.37.0",
    "ldap3~=2.9",
    "markdown2~=2.5.3",
    "MarkupSafe~=3.0.2",
    "num2words~=0.5.14",
    "oauthlib~=3.2.2",
    "openpyxl~=3.1.5",
    "orjson~=3.10.18",
    "passlib~=1.7.4",
    "pdfkit~=1.0.0",
    "phonenumbers~=9.0.7",
    "premailer~=3.10.0",
    "psutil~=7.0.0",
    "psycopg2-binary~=2.9.1",
    "pyOpenSSL~=25.1.0",
    "pydantic~=2.11.7",
    "pyotp~=2.9.0",
    "python-dateutil~=2.9.0",
    "pytz==2025.2",
    "rauth~=0.7.3",
    "redis~=6.2.0",
    "hiredis~=3.2.1"
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://frappeframework.com"
Repository = "https://github.com/frappe/frappe"

[tool.setuptools]
packages = ["frappe"]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
frappe = ["**/*.json", "**/*.js", "**/*.html", "**/*.css", "**/*.md", "**/*.txt", "**/*.po", "**/*.pot", "**/*.sql"]
